--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -12,27 +12,22 @@ body {
  * Sidebar
  */
 
-.sidebar {
-  position: fixed;
-  top: 0;
-  /* rtl:raw:
-  right: 0;
-  */
-  bottom: 0;
-  /* rtl:remove */
-  left: 0;
-  z-index: 100; /* Behind the navbar */
-  padding: 48px 0 0; /* Height of navbar */
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+.wrapper {
+  display: flex;
+  width: 100%;
+  align-items: stretch;
 }
 
-.sidebar-sticky {
-  position: relative;
-  top: 0;
-  height: calc(100vh - 48px);
-  padding-top: .5rem;
-  overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+.sidebar {
+  min-width: 250px;
+  max-width: 250px;
+  background: #005086;
+  color: #fff;
+  transition: all 0.3s;
+}
+
+.sidebar.active {
+    margin-left: -250px
 }
 
 .sidebar .nav-link {
@@ -54,9 +49,14 @@ body {
   color: inherit;
 }
 
-.sidebar-heading {
-  font-size: .75rem;
-  text-transform: uppercase;
+/*
+ * Main
+ */
+
+.content {
+  width: 100%;
+  min-height: 100vh;
+  transition: all 0.3s;
 }
 
 /*
@@ -64,16 +64,11 @@ body {
  */
 
 .navbar-brand {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
+  padding-top: .50rem;
+  padding-bottom: .50rem;
   font-size: 1rem;
   background-color: rgba(0, 0, 0, .25);
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
-}
-
-.navbar .navbar-toggler {
-  top: .25rem;
-  right: 1rem;
 }
 
 .navbar .form-control {
@@ -95,4 +90,18 @@ body {
 
 .home {
     min-height: calc(100vh - 48px);
+}
+
+@media(maz-width:768px) {
+    .sidebar {
+        margin-left: -250px
+    }
+
+    .sidebar.active {
+        margin-left: 0px
+    }
+
+    .sidebarCollapse span {
+        display: none
+    }
 }
