--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,5 +1,5 @@
 body {
-  font-size: .875rem;
+  font-size: 0.875rem;
   overflow-x: hidden;
 }
 
@@ -28,7 +28,7 @@ body {
 }
 
 .sidebar.active {
-    margin-left: -250px
+  margin-left: -250px;
 }
 
 .sidebar .nav-link {
@@ -61,7 +61,7 @@ body {
 }
 
 .content .active {
-    width: calc(100% - 250px);
+  width: calc(100% - 250px);
 }
 
 /*
@@ -69,44 +69,44 @@ body {
  */
 
 .navbar-brand {
-  padding-top: .50rem;
-  padding-bottom: .50rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   font-size: 1rem;
-  background-color: rgba(0, 0, 0, .25);
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
+  background-color: rgba(0, 0, 0, 0.25);
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.25);
 }
 
 .navbar .form-control {
-  padding: .75rem 1rem;
+  padding: 0.75rem 1rem;
   border-width: 0;
   border-radius: 0;
 }
 
 .form-control-dark {
   color: #fff;
-  background-color: rgba(255, 255, 255, .1);
-  border-color: rgba(255, 255, 255, .1);
+  background-color: rgba(255, 255, 255, 0.1);
+  border-color: rgba(255, 255, 255, 0.1);
 }
 
 .form-control-dark:focus {
   border-color: transparent;
-  box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+  box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
 }
 
 .home {
-    min-height: calc(100vh - 72px);
+  min-height: calc(100vh - 72px);
 }
 
-@media(maz-width:768px) {
-    .sidebar {
-        margin-left: -250px
-    }
+@media (maz-width: 768px) {
+  .sidebar {
+    margin-left: -250px;
+  }
 
-    .sidebar.active {
-        margin-left: 0px
-    }
+  .sidebar.active {
+    margin-left: 0px;
+  }
 
-    .sidebarCollapse span {
-        display: none
-    }
+  .sidebarCollapse span {
+    display: none;
+  }
 }
